Refactor of solver packages, refresh of naming. Added abstract class back in. Added UUID field